tests/NormalTests/paczka1/fuzzy1/85651495.err
Error in line 10: QWfvRjj3u A494 59,7
Error in line 6: O9H3U4igw8 A572 37,6
Error in line 15: TwehjRvx A541 92,5
Error in line 22: TwehjRvx A693 198,7
Error in line 26: TwehjRvx A572 1h,h
Error in line 13: avHN1r7 A494 60,3
Error in line 33: O9H3U4igw8 A541 78,6
Error in line 34: O9H3U4igw8 A494 7,2
